2006-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message): Don't filter for
	`tramp-warning', it doesn't exist.
	(tramp-touch): Raise a warning only if it fails.  It isn't worth
	an error.

2006-02-27  Heike C. Zimmerer  <hcz@hczim.de>

	* tramp.el (tramp-echo-mark, tramp-echoed-echo-mark-regexp): New
	defconst.
	(tramp-check-for-regexp): New defun.
	(tramp-wait-for-regexp): Apply it.
	(tramp-open-connection-setup-interactive-shell): Check for echo
	suppression on remote side.
	(tramp-send-command, tramp-send-command-internal): Add
	`tramp-echo-mark' to the command if needed.
	(tramp-send-command-and-check): Take a more precise regexp for
	exit status check.

2006-02-20  Heike C. Zimmerer  <hcz@hczim.de>  (tiny change)

	* tramp.el (tramp-maybe-open-connection): Fix typo in calling
	`tramp-wait-for-output'.

2006-02-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el, trampver.el.in: Adapt copyright years.

2006-02-08  Sam Steingold  <sds@gnu.org>

	* tramp.el (tramp-maybe-open-connection): Do not wait for
	output from a dead connection.

2006-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-error): Add a fmt-string to the call of
	`tramp-message-for-buffer'.

2006-01-30  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-unload-tramp): Don't try to unload tramp-util.

	* tramp-smb.el (tramp-smb-wait-for-output): Wait always for the
	prompt.  If it returns earlier (when detecting an error message),
	the rest of the output will merge accidently with the output of
	the next command.  Reported by M Jared Finder <jared@hpalace.com>.

2006-01-27  Antonio Martinez  <antonio.martinez.shotton@gmail.com>  (tiny change)

	* tramp.el (tramp-handle-call-process): All excursions must be
	saved correctly.

2006-01-27  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el, tramp-cache.el, tramp-ftp.el, tramp-util.el,
	* tramp-vc.el: Add code for unloading Tramp.  See comment before