@@ -1,3 +1,8 @@
+2006-03-08  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-pre-connection): The buffer must be erased.
+	Reported by Heike C. Zimmerer <hcz@hczim.de>.
+
 2006-03-05  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-debug-message): Don't filter for
